<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_gravity="start"
            android:padding="@dimen/_12sdp"
            android:text="@string/Sort_By"
            android:textColor="@color/sort_by_title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:padding="@dimen/_12sdp"
            android:text="@string/submit"
            android:textColor="@color/colorPrimary" />

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_below="@+id/tv_submit"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/line" />


        <Button
            android:id="@+id/btn_date"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_below="@+id/view_line"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/rounded_grey"
            android:text="@string/date"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_price"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_below="@+id/btn_date"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/rounded_grey"
            android:text="@string/price"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_below="@+id/btn_price"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/rounded_grey"
            android:text="@string/title"
            android:textAllCaps="false" />


    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>