<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".Ui.Fragments.OccasionsFragment">


    <TextView
        android:id="@+id/tv_msg"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ShoppingCartMessageLabel"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:elevation="@dimen/_50sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_centerInParent="true"
        />


    <ProgressBar
        android:id="@+id/loading_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_500sdp"
        android:indeterminateDrawable="@drawable/custom_progress_bar"
        android:visibility="gone"
        android:layout_centerInParent="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_constrain"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:listitem="@layout/cart_item" />

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@color/line" />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/bottom_constrain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/_10sdp">

        <RelativeLayout
            android:id="@+id/rel_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_50sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_50sdp"
            android:paddingBottom="@dimen/_5sdp">


            <TextView
                android:id="@+id/tv_subtotal_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/subtotal"
                android:textColor="@color/subtotal_txt" />

            <TextView
                android:id="@+id/tv_subtotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="10 kwd"
                android:textColor="@color/subtotal_txt" />


            <TextView
                android:id="@+id/tv_delivery_charges_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_subtotal_title"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/delivery_charges"
                android:textColor="@color/subtotal_txt" />

            <TextView
                android:id="@+id/tv_delivery_charges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_subtotal"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="20 KWD"
                android:textColor="@color/subtotal_txt" />

            <TextView
                android:id="@+id/tv_total_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_delivery_charges_title"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/total"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_delivery_charges"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="20 KWD"
                android:textColor="@color/black" />


        </RelativeLayout>


        <Button
            android:id="@+id/btn_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rel_bottom"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/colorPrimary"
            android:text="@string/checkout"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </RelativeLayout>

</RelativeLayout>
